--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h2>Меню</h2>
                 <ul>
                     <li>
-                        <a class="menu-item" href="#">Каталог</a>
+                        <a class="menu-item" href="#projects">Каталог</a>
                     </li>
                     <li>
                         <a class="menu-item" href="#technology">Технологии</a>
@@ -45,7 +45,7 @@
                         <a class="menu-item" href="#projects">Наши проекты</a>
                     </li>
                     <li>
-                        <a class="menu-item" href="#">Производство</a>
+                        <a class="menu-item" href="#technology">Производство</a>
                     </li>
                     <li>
                         <a class="menu-item" href="#guarantees">Гарантия</a>
@@ -138,9 +138,9 @@
                         src="images/modern-house-003.png" alt="Modern house 003"></a>
                 <div class="project-item-image-low">
                     <a href="images/brian-babb-XbwHrt87mQ0-unsplash.png"><img
-                            src="images/brian-babb-XbwHrt87mQ0-unsplash.png" alt=""></a>
-                    <a href="images/99.png"><img src="images/99.png" alt=""></a>
-                    <a href="images/31.png"><img src="images/31.png" alt=""></a>
+                            src="images/brian-babb-XbwHrt87mQ0-unsplash.png" alt="house-003"></a>
+                    <a href="images/99.png"><img src="images/99.png" alt="house-003"></a>
+                    <a href="images/31.png"><img src="images/31.png" alt="house-003"></a>
                 </div>
             </div>
             <div class="project-item-text project-item-text-h">
@@ -198,9 +198,9 @@
                 <a href="images/901.png"><img src="images/901.png" alt="Modern house 004"></a>
                 <div class="project-item-image-low">
                     <a href="images/brian-babb-XbwHrt87mQ0-unsplash.png"><img
-                            src="images/brian-babb-XbwHrt87mQ0-unsplash.png" alt=""></a>
-                    <a href="images/99.png"><img src="images/99.png" alt=""></a>
-                    <a href="images/31.png"><img src="images/31.png" alt=""></a>
+                            src="images/brian-babb-XbwHrt87mQ0-unsplash.png" alt="house 004"></a>
+                    <a href="images/99.png"><img src="images/99.png" alt="house 004"></a>
+                    <a href="images/31.png"><img src="images/31.png" alt="house 004"></a>
                 </div>
             </div>
         </div>
@@ -212,9 +212,9 @@
                             src="images/005.png" alt="Modern house 005"></a>
                     <div class="project-item-image-low">
                         <a href="images/brian-babb-XbwHrt87mQ0-unsplash.png"><img
-                                src="images/brian-babb-XbwHrt87mQ0-unsplash.png" alt=""></a>
-                        <a href="images/99.png"><img src="images/99.png" alt=""></a>
-                        <a href="images/31.png"><img src="images/31.png" alt=""></a>
+                                src="images/brian-babb-XbwHrt87mQ0-unsplash.png" alt="house 005"></a>
+                        <a href="images/99.png"><img src="images/99.png" alt="house 005"></a>
+                        <a href="images/31.png"><img src="images/31.png" alt="house 005"></a>
                     </div>
                 </div>
                 <div class="project-item-text project-item-text-h">
@@ -273,9 +273,9 @@
                     <a href="images/006.png"><img src="images/006.png" alt="Modern house 006"></a>
                     <div class="project-item-image-low">
                         <a href="images/brian-babb-XbwHrt87mQ0-unsplash.png"><img
-                                src="images/brian-babb-XbwHrt87mQ0-unsplash.png" alt=""></a>
-                        <a href="images/99.png"><img src="images/99.png" alt=""></a>
-                        <a href="images/31.png"><img src="images/31.png" alt=""></a>
+                                src="images/brian-babb-XbwHrt87mQ0-unsplash.png" alt="house 006"></a>
+                        <a href="images/99.png"><img src="images/99.png" alt="house 006"></a>
+                        <a href="images/31.png"><img src="images/31.png" alt="house 006"></a>
                     </div>
                 </div>
             </div>
@@ -286,9 +286,9 @@
                             src="images/007.png" alt="Modern house 007"></a>
                     <div class="project-item-image-low">
                         <a href="images/brian-babb-XbwHrt87mQ0-unsplash.png"><img
-                                src="images/brian-babb-XbwHrt87mQ0-unsplash.png" alt=""></a>
-                        <a href="images/99.png"><img src="images/99.png" alt=""></a>
-                        <a href="images/31.png"><img src="images/31.png" alt=""></a>
+                                src="images/brian-babb-XbwHrt87mQ0-unsplash.png" alt="house 007"></a>
+                        <a href="images/99.png"><img src="images/99.png" alt="house 007"></a>
+                        <a href="images/31.png"><img src="images/31.png" alt="house 007"></a>
                     </div>
                 </div>
                 <div class="project-item-text project-item-text-h">
@@ -395,7 +395,7 @@
     </div>
 </section>
 
-<section class="section step-house">
+<section class="step-house">
     <div class="container">
         <h2 class="step-house-title">6 шагов к вашему новому дому</h2>
         <div class="step-house-items">
@@ -416,7 +416,7 @@
                     <div class="block-number">
                         <h2>02</h2>
                     </div>
-                    <div class="block-image"><img src="images/phone-call.png" alt="chat"></div>
+                    <div class="block-image"><img src="images/phone-call.png" alt="phone-call"></div>
                 </div>
                 <div class="step-house-text">
                     <h3>Звонок</h3>
@@ -429,7 +429,7 @@
                     <div class="block-number">
                         <h2>03</h2>
                     </div>
-                    <div class="block-image"><img src="images/conference.png" alt="chat"></div>
+                    <div class="block-image"><img src="images/conference.png" alt="conference"></div>
                 </div>
                 <div class="step-house-text">
                     <h3>Встреча</h3>
@@ -441,7 +441,7 @@
                     <div class="block-number">
                         <h2>04</h2>
                     </div>
-                    <div class="block-image"><img src="images/contract.png" alt="chat"></div>
+                    <div class="block-image"><img src="images/contract.png" alt="contract"></div>
                 </div>
                 <div class="step-house-text">
                     <h3>Договор</h3>
@@ -453,7 +453,7 @@
                     <div class="block-number">
                         <h2>05</h2>
                     </div>
-                    <div class="block-image"><img src="images/technics.png" alt="chat"></div>
+                    <div class="block-image"><img src="images/technics.png" alt="technics"></div>
                 </div>
                 <div class="step-house-text">
                     <h3>Строительство</h3>
@@ -465,7 +465,7 @@
                     <div class="block-number">
                         <h2>06</h2>
                     </div>
-                    <div class="block-image"><img src="images/house.png" alt="chat"></div>
+                    <div class="block-image"><img src="images/house.png" alt="house"></div>
                 </div>
                 <div class="step-house-text">
                     <h3>Ваш дом</h3>
@@ -476,16 +476,16 @@
     </div>
 </section>
 
-<section class="section slider-house">
+<section class="slider-house">
     <div class="container">
         <h2>Построили более 200 домов за 10 лет</h2>
         <div class="slider">
             <div class="slider-item">
-                <img src="images/istockphoto-1130338518-170667a.png" alt="">
+                <img src="images/foto-003.png" alt="foto-003">
                 <div class="slid-description">
                     <div class="slid-description-left">
                         <h3>Modern house 005</h3>
-                        <p>Киевская обл., г. Борова, 15</p>
+                        <p>Нижегородская обл., г. Павлово</p>
                     </div>
                     <div class="slid-description-center"></div>
                     <div class="slid-description-right">
@@ -501,11 +501,11 @@
                 </div>
             </div>
             <div class="slider-item">
-                <img src="images/2.png" alt="">
+                <img src="images/foto-004.png" alt="foto-004">
                 <div class="slid-description">
                     <div class="slid-description-left">
                         <h3>Modern house 004</h3>
-                        <p>Донецкая обл., г. Донецк, 18</p>
+                        <p>Владимирская обл., г. Ковров</p>
                     </div>
                     <div class="slid-description-center"></div>
                     <div class="slid-description-right">
@@ -521,11 +521,11 @@
                 </div>
             </div>
             <div class="slider-item">
-                <img src="images/3.png" alt="">
+                <img src="images/foto-005.png" alt="foto-005">
                 <div class="slid-description">
                     <div class="slid-description-left">
                         <h3>Modern house 003</h3>
-                        <p>Черниговская обл., г. Вологор, 42</p>
+                        <p>Московская обл., г. Чехов</p>
                     </div>
                     <div class="slid-description-center"></div>
                     <div class="slid-description-right">
@@ -541,11 +541,11 @@
                 </div>
             </div>
             <div class="slider-item">
-                <img src="images/4.png" alt="">
+                <img src="images/foto-006.png" alt="foto-006">
                 <div class="slid-description">
                     <div class="slid-description-left">
                         <h3>Modern house 007</h3>
-                        <p>Одесская обл., г. Арман, 32</p>
+                        <p>Республика Татарстан, г. Казань</p>
                     </div>
                     <div class="slid-description-center"></div>
                     <div class="slid-description-right">
@@ -561,11 +561,11 @@
                 </div>
             </div>
             <div class="slider-item">
-                <img src="images/5.png" alt="">
+                <img src="images/foto-007.png" alt="foto-007">
                 <div class="slid-description">
                     <div class="slid-description-left">
                         <h3>Modern house 006</h3>
-                        <p>Херсонская обл., г. Соном, 35</p>
+                        <p>Нижегородская обл., г. Дзержинск</p>
                     </div>
                     <div class="slid-description-center"></div>
                     <div class="slid-description-right">
@@ -584,7 +584,7 @@
     </div>
 </section>
 
-<section id="guarantees" class="section guarantees">
+<section id="guarantees" class="guarantees">
     <div class="container">
         <h2>Гарантии и условия оплаты</h2>
         <div class="guarantees-block-items">
