--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                     <div class="block-number">
                         <h2>06</h2>
                     </div>
-                    <div class="block-image"><img src="images/house.png" alt="house"></div>
+                    <div class="block-image"><img src="images/houses.png" alt="house"></div>
                 </div>
                 <div class="step-house-text">
                     <h3>Ваш дом</h3>
